- Displaying custom drinks - Saving spirits and mixers in the BartsyApplication to reuse in OrderCustomDrinkActivity
TODO : OrderCustomDrinkActivity has to done for adding mixers and order processing

git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@180 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/drink_item.xml
+++ b/res/layout/drink_item.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/view_drink_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
                 android:text="Drink title"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="15sp" />
@@ -32,7 +33,7 @@
                 android:id="@+id/view_drink_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Drink description"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="12sp" />
 
