--- a/res/layout/user_profile.xml
+++ b/res/layout/user_profile.xml
@@ -29,7 +29,8 @@
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:background="@drawable/rounded_corner"
                 android:orientation="vertical"
-                android:padding="@dimen/activity_vertical_margin" >
+                android:padding="@dimen/activity_vertical_margin"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -40,7 +41,7 @@
                         android:id="@+id/TextView02"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
-                        android:text="Email/userId" />
+                        android:text="Email" />
 
                     <EditText
                         android:id="@+id/view_profile_email"
@@ -92,16 +93,34 @@
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:background="@drawable/rounded_corner"
                 android:orientation="horizontal"
-                android:padding="@dimen/activity_vertical_margin" >
+                android:padding="@dimen/activity_vertical_margin"
+                >
 
-                <ImageView
-                    android:id="@+id/view_profile_user_image"
+                <RelativeLayout
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:clickable="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/profile" />
+                    android:layout_marginRight="@dimen/activity_horizontal_margin" >
+
+                    <ImageView
+                        android:id="@+id/view_profile_user_image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:clickable="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/profile" />
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="fill_parent"
+                        android:layout_height="30dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:background="#66000000"
+                        android:gravity="center"
+                        android:text="Edit Image"
+                        android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+
+                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -110,9 +129,9 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="15dp"
-                        android:hint="Your nickname will be visible to venue staff. If you want others to be able to see it check the option."
-                        android:text="Nickname:" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/activity_vertical_margin"
+                        android:text="Display name:" />
 
                     <EditText
                         android:id="@+id/view_profile_nickname"
@@ -125,14 +144,6 @@
 
                         <requestFocus />
                     </EditText>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="2"
-                        android:gravity="bottom"
-                        android:text="&lt;- Click on picture to change"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -276,7 +287,8 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal"
+                    android:visibility="visible" >
 
                     <Button
                         android:id="@+id/view_profile_button_cc_add"
@@ -351,7 +363,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="top"
-                            android:text="Description:" />
+                            android:text="About you:" />
 
                         <EditText
                             android:id="@+id/view_profile_description"
@@ -375,24 +387,26 @@
                             android:text="Gender:" />
 
                         <RadioGroup
-                            android:id="@+id/wifiPresent"
+                            android:id="@+id/view_profile_gender"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:checkedButton="@+id/wifiPresentYes"
                             android:orientation="horizontal" >
 
                             <RadioButton
-                                android:id="@+id/wifiPresentYes"
+                                android:id="@+id/view_profile_gender_male"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Male"
+								android:checked="false"
                                 android:textColor="#000000" />
 
                             <RadioButton
-                                android:id="@+id/wifiPresentNo"
+                                android:id="@+id/view_profile_gender_female"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Female"
+								android:checked="false"
                                 android:textColor="#000000" />
                         </RadioGroup>
                     </LinearLayout>
@@ -411,13 +425,47 @@
                             android:text="Date of birth:" />
 
                         <EditText
-                            android:id="@+id/editText1"
+                            android:id="@+id/view_profile_birthday"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:ems="10"
-                            android:hint="MM/DD/YYYY"
                             android:inputType="date" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal" >
+
+                        <TextView
+                            android:id="@+id/TextView06"
+                            android:layout_width="90dp"
+                            android:layout_height="wrap_content"
+                            android:text="Looking to:" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" >
+
+                            <CheckBox
+                                android:id="@+id/view_profile_status_singles"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Meet singles"
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                            <CheckBox
+                                android:id="@+id/view_profile_status_friends"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Make friends"
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
+                            
+                        </LinearLayout>
+                        
                     </LinearLayout>
 
                     <LinearLayout
@@ -440,24 +488,27 @@
                             android:checkedButton="@+id/authenticationYes" >
 
                             <RadioButton
-                                android:id="@+id/authenticationYes"
+                                android:id="@+id/view_profile_orientation_straight"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Straight"
+								android:checked="false"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <RadioButton
-                                android:id="@+id/RadioButton01"
+                                android:id="@+id/view_profile_orientation_gay"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Gay"
+								android:checked="false"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <RadioButton
-                                android:id="@+id/authenticationNo"
+                                android:id="@+id/view_profile_orientation_bisexual"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Bisexual"
+								android:checked="false"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
                         </RadioGroup>
                     </LinearLayout>
