Added password verification field in user profile
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@190 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/user_profile.xml
+++ b/res/layout/user_profile.xml
@@ -75,6 +75,28 @@
                         android:inputType="textPassword"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:text="Confirm:" />
+
+                    <EditText
+                        android:id="@+id/view_profile_password_confirm"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="retype your password"
+                        android:inputType="textPassword"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <TextView
