--- a/res/layout/user_profile.xml
+++ b/res/layout/user_profile.xml
@@ -116,7 +116,7 @@
                 android:background="@drawable/rounded_corner"
                 android:orientation="horizontal"
                 android:padding="@dimen/activity_vertical_margin"
-                >
+                android:visibility="visible" >
 
                 <RelativeLayout
                     android:layout_width="100dp"
@@ -192,6 +192,29 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:orientation="horizontal" >
+
+                    <TextView
+                        android:id="@+id/TextView14"
+                        android:layout_width="90dp"
+                        android:layout_height="fill_parent"
+                        android:layout_gravity="right"
+                        android:gravity="center_vertical"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <TextView
+                        android:id="@+id/TextView13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="14"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" >
 
@@ -239,7 +262,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                     android:orientation="horizontal" >
 
                     <TextView
@@ -256,6 +278,54 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="14"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="25dp"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:orientation="horizontal" >
+
+                    <TextView
+                        android:id="@+id/TextView12"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:ems="14"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <TextView
+                        android:id="@+id/TextView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Exp: "
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <TextView
+                        android:id="@+id/view_profile_cc_month"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <TextView
+                        android:id="@+id/TextView10"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:text="/"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <TextView
+                        android:id="@+id/view_profile_cc_year"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <TextView
+                        android:id="@+id/TextView09"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 </LinearLayout>
