--- a/res/layout/dialog_drink_order.xml
+++ b/res/layout/dialog_drink_order.xml
@@ -27,6 +27,92 @@
             android:textSize="18sp"
             android:textStyle="bold" />
     </LinearLayout>
+    
+    <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/rounded_corner"
+                android:padding="@dimen/activity_vertical_margin" >
+
+                <RelativeLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp" >
+					<ImageView
+                        android:id="@+id/ImageView03"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/rounded_corner" />
+                    <ImageView
+                        android:id="@+id/view_user_dialog_image_resource"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:scaleType="fitXY" />
+
+                    
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingLeft="@dimen/activity_horizontal_margin" >
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" >
+
+                        <TextView
+                            android:id="@+id/view_user_dialog_info"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                            android:text=""
+                            android:textAppearance="?android:attr/textAppearanceSmall" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" >
+
+                        <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="1dp" >
+
+                            <ImageView
+                                android:id="@+id/ImageView11"
+                                android:layout_width="17dp"
+                                android:layout_height="17dp"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/location" />
+                        </FrameLayout>
+
+                        <TextView
+                            android:id="@+id/TextView09"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                            android:text="Santa Monica, CA"
+                            android:textAppearance="?android:attr/textAppearanceSmall" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" >
+
+                        <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="1dp" >
+                        </FrameLayout>
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -113,15 +199,7 @@
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:text="* 1 shot Sambuca\n* Rocks\n* 3 coffee beans for good luck"
                     android:textSize="12sp" />
-
-                <Button
-                    android:id="@+id/button2"
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="fill_parent"
-                    android:layout_height="32dp"
-                    android:drawableLeft="@drawable/wrench"
-                    android:text="Customize drink"
-                    android:textSize="12sp" />
+           
             </LinearLayout>
         </LinearLayout>
 
