--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -207,7 +207,6 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/TextView17"
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:gravity="center_vertical"
@@ -225,7 +224,7 @@
                                 android:textSize="14sp" />
 
                             <TextView
-                                android:id="@+id/TextView14"
+                                android:id="@+id/feesText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:gravity="center_vertical"
@@ -254,7 +253,7 @@
                                 android:textSize="16sp" />
 
                             <TextView
-                                android:id="@+id/TextView08"
+                                android:id="@+id/totalText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:layout_gravity="right"
