--- a/res/layout/user_profile.xml
+++ b/res/layout/user_profile.xml
@@ -49,52 +49,77 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:hint="Login with email"
                         android:inputType="textEmailAddress"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/view_profile_account_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
+                    android:layout_height="wrap_content" >
 
                     <TextView
-                        android:id="@+id/TextView01"
-                        android:layout_width="80dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Password:" />
+                        android:text="Create Bartsy acount:" />
 
-                    <EditText
-                        android:id="@+id/view_profile_password"
-                        android:layout_width="0dp"
+                    <CheckBox
+                        android:id="@+id/view_profile_account_checkbox"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:hint="6 or more characters"
-                        android:inputType="textPassword"
+                        android:checked="false"
+                        android:text="Add password"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/view_profile_password_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
+                    android:orientation="vertical" >
 
-                    <TextView
-                        android:layout_width="80dp"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Confirm:" />
+                        android:orientation="horizontal" >
 
-                    <EditText
-                        android:id="@+id/view_profile_password_confirm"
-                        android:layout_width="0dp"
+                        <TextView
+                            android:id="@+id/TextView01"
+                            android:layout_width="80dp"
+                            android:layout_height="wrap_content"
+                            android:text="Password:" />
+
+                        <EditText
+                            android:id="@+id/view_profile_password"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:ems="10"
+                            android:hint="6 or more characters"
+                            android:inputType="textPassword"
+                            android:textAppearance="?android:attr/textAppearanceSmall" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:hint="retype your password"
-                        android:inputType="textPassword"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                        android:orientation="horizontal" >
+
+                        <TextView
+                            android:layout_width="80dp"
+                            android:layout_height="wrap_content"
+                            android:text="Confirm:" />
+
+                        <EditText
+                            android:id="@+id/view_profile_password_confirm"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:ems="10"
+                            android:hint="retype your password"
+                            android:inputType="textPassword"
+                            android:textAppearance="?android:attr/textAppearanceSmall" />
+                    </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
