--- a/res/layout/init_page_0.xml
+++ b/res/layout/init_page_0.xml
@@ -24,13 +24,13 @@
 
     </LinearLayout>
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="2"
-        android:rowCount="2" >
-
+    <TableLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:shrinkColumns="*"
+                android:stretchColumns="*" >
+		<TableRow android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
                 android:textSize="12sp" />
 
         </LinearLayout>
-
+		
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -81,7 +81,9 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="12sp" />
         </LinearLayout>
-
+		</TableRow>
+		<TableRow android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -130,7 +132,8 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="12sp" />
         </LinearLayout>
-    </GridLayout>
+        </TableRow>
+    </TableLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
