--- a/res/drawable/rounded_corner.xml
+++ b/res/drawable/rounded_corner.xml
@@ -15,7 +15,7 @@
   -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="1dp" 
-        android:color="#bbbbbb" />
-    <solid android:color="#ffffffff" />
+        android:color="#33bbbbbb" />
+    <solid android:color="#33ffffff" />
     <corners android:radius="6dp" />
 </shape>
