--- a/res/drawable/rounded_corner_dark.xml
+++ b/res/drawable/rounded_corner_dark.xml
@@ -20,7 +20,7 @@
   -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="1dp" 
-        android:color="#333333" />
-    <solid android:color="#555555" />
-    <corners android:radius="6dp" />
+        android:color="#33ffffff" />
+    <solid android:color="#11888888" />
+    <corners android:radius="0dp" />
 </shape>
