--- a/res/layout/maps_main.xml
+++ b/res/layout/maps_main.xml
@@ -2,6 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
+    android:background="@drawable/background"
     android:orientation="vertical" >
 
     <TextView
