--- a/res/layout/offer_drink_dialog.xml
+++ b/res/layout/offer_drink_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="#eeeeee"
+    android:background="@drawable/rounded_corner_dark"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin" >
 
@@ -18,7 +18,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="@drawable/rounded_corner_dark"
+            android:background="@drawable/rounded_corner"
             android:gravity="center"
             android:padding="@dimen/activity_vertical_margin"
             android:text="Sambuca on the rocks"
@@ -71,7 +71,7 @@
                             android:layout_gravity="center_vertical"
                             android:layout_marginLeft="@dimen/activity_horizontal_margin"
                             android:text=""
-                            android:textAppearance="?android:attr/textAppearanceSmall" />
+                            android:textAppearance="?android:attr/textAppearanceSmallInverse" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -232,23 +232,27 @@
     </LinearLayout>
 
     <LinearLayout
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2" >
 
         <Button
+            android:id="@+id/rejectButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:text="Reject" />
+
+        <Button
             android:id="@+id/acceptButton"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.21"
             android:text="Accept" />
 
-        <Button
-            android:id="@+id/rejectButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25"
-            android:text="Reject" />
     </LinearLayout>
 
 </LinearLayout>
