--- a/res/layout/user_item.xml
+++ b/res/layout/user_item.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:background="@android:color/background_light"
+        android:background="@drawable/rounded_corner_dark"
         android:padding="4dp" >
 
         <RelativeLayout
@@ -39,6 +39,7 @@
                 android:id="@+id/view_user_list_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Name"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
