--- a/res/layout/user_profile.xml
+++ b/res/layout/user_profile.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/background"
     android:orientation="vertical" >
 
     <ScrollView
@@ -27,10 +28,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:background="@drawable/rounded_corner"
+                android:background="@drawable/rounded_corner_dark"
                 android:orientation="vertical"
-                android:padding="@dimen/activity_vertical_margin"
-                >
+                android:padding="@dimen/activity_vertical_margin" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -138,7 +138,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:background="@drawable/rounded_corner"
+                android:background="@drawable/rounded_corner_dark"
                 android:orientation="horizontal"
                 android:padding="@dimen/activity_vertical_margin"
                 android:visibility="visible" >
@@ -165,7 +165,7 @@
                         android:background="#66000000"
                         android:gravity="center"
                         android:text="Edit Image"
-                        android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 </RelativeLayout>
 
@@ -210,33 +210,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:background="@drawable/rounded_corner"
+                android:background="@drawable/rounded_corner_dark"
                 android:orientation="vertical"
-                android:padding="@dimen/activity_vertical_margin"
-                android:visibility="gone" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
-                    android:orientation="horizontal" >
-
-                    <TextView
-                        android:id="@+id/TextView14"
-                        android:layout_width="90dp"
-                        android:layout_height="fill_parent"
-                        android:layout_gravity="right"
-                        android:gravity="center_vertical"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                    <TextView
-                        android:id="@+id/TextView13"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="14"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
-                </LinearLayout>
+                android:padding="@dimen/activity_vertical_margin" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -396,7 +372,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:background="@drawable/rounded_corner"
+                android:background="@drawable/rounded_corner_dark"
                 android:orientation="vertical" >
 
                 <LinearLayout
@@ -441,7 +417,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corner"
+                android:background="@drawable/rounded_corner_dark"
                 android:orientation="vertical"
                 android:padding="@dimen/activity_vertical_margin" >
 
@@ -476,7 +452,6 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/textView1"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="top"
@@ -515,16 +490,14 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Male"
-								android:checked="false"
-                                android:textColor="#000000" />
+								android:checked="false"/>
 
                             <RadioButton
                                 android:id="@+id/view_profile_gender_female"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Female"
-								android:checked="false"
-                                android:textColor="#000000" />
+								android:checked="false"/>
                         </RadioGroup>
                     </LinearLayout>
 
@@ -536,7 +509,6 @@
                         android:orientation="horizontal" >
 
                         <TextView
-                            android:id="@+id/textView1"
                             android:layout_width="90dp"
                             android:layout_height="wrap_content"
                             android:text="Date of birth:" />
