--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Holo">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -18,7 +18,7 @@
         
     </style>
    
- 	<style name="DrinkDialog" parent="@android:style/Theme.Holo.Light.Dialog">
+ 	<style name="DrinkDialog" parent="@android:style/Theme.Holo.Dialog">
         <item name="android:windowAnimationStyle">@style/DrinkDialogAnimation</item>
     </style>
 
